[tool.poetry]
name = "pdscheduling"
version = "0.2.2"
description = ""
authors = ["Roman <roman@optduty.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
pdpyras = "^4.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
responses = "^0.13.3"
black = "^21.5b1"
pytest-recording = "^0.11.0"
mypy = "^0.902"
types-requests = "^0.1.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
